--- a/Default.cshtml
+++ b/Default.cshtml
@@ -7,7 +7,7 @@
 }
 
 <h1>Welcome to Fourth Coffee!</h1>
-
+<iframe src="https://giphy.com/embed/FY8c5SKwiNf1EtZKGs" width="364" height="480" style="" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/moodman-animals-dogs-doggo-FY8c5SKwiNf1EtZKGs">via GIPHY</a></p>
 <div id="featuredProduct">
     <img alt="Featured Product" src="~/Images/Products/@featured.ImageName"/>
     <div id="featuredProductInfo">
